# ccg

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.c
src/: main.c
